--- a/index.html
+++ b/index.html
@@ -139,6 +139,8 @@
             margin-right: 10px;
         }
 
+        
+
 
 
 
@@ -196,7 +198,14 @@
         </div>
 
         <div class="kanan-banner2">
+            <div class="kananbanner2-atas">
+                <h5>3D ICONS LIBRARY <span class="selling">Selling</span></h5>
+                <p class="textstats">Here you can see live stats of our sales</p>
+            </div>  
 
+            <div class="kananbanner2-bawah">
+
+            </div>
         </div>
 
     </section>
