--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             margin-right: 10px;
         }
 
-        
+
 
 
 
@@ -199,7 +199,7 @@
 
         <div class="kanan-banner2">
             <div class="kananbanner2-atas">
-                <h5>3D ICONS LIBRARY <span class="selling">Selling</span></h5>
+                <h5 class="3D">3D ICONS LIBRARY <span class="selling">Selling</span></h5>
                 <p class="textstats">Here you can see live stats of our sales</p>
             </div>  
 
