--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         align-items: center;
         justify-content: space-evenly;
         margin-left: 50px;
+        margin-top: 200px;
       }
 
       .gambar-banner1 {
@@ -139,6 +140,7 @@
       #banner2 {
         display: flex;
         justify-content: space-around;
+        margin-left: 30px;
       }
 
       .library {
