--- a/index.html
+++ b/index.html
@@ -221,7 +221,8 @@
             >
               <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
               <polyline points="7 10 12 15 17 10"></polyline>
-              <line x1="12" y1="15" x2="12" y2="3"></line></svg
+              <line x1="12" y1="15" x2="12" y2="3"></line>
+            </svg>
             >Try for free
           </button>
           <button class="button2">
@@ -241,14 +242,15 @@
                 d="M6 2L3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4z"
               ></path>
               <line x1="3" y1="6" x2="21" y2="6"></line>
-              <path d="M16 10a4 4 0 0 1-8 0"></path></svg
+              <path d="M16 10a4 4 0 0 1-8 0"></path>
+            </svg>
             >Sell your Designs
           </button>
         </div>
       </div>
 
       <div class="gambar-banner1">
-        <img src="./gambar/Objects (1).png" width="550" />
+        <img src="./gambar/Objects (1).png" width="750" />
       </div>
     </section>
 
