--- a/index.html
+++ b/index.html
@@ -139,8 +139,9 @@
 
       #banner2 {
         display: flex;
-        justify-content: space-around;
-        margin-left: 30px;
+        justify-content: space-between;
+        margin-left: 295px;
+        margin-right: 350px;
       }
 
       .library {
