--- a/index.html
+++ b/index.html
@@ -144,6 +144,10 @@
         margin-right: 350px;
       }
 
+      .kiri-banner2 {
+        margin-top: -10px;
+      }
+
       .library {
         font-size: 18px;
       }
